--- a/compose.dev.yaml
+++ b/compose.dev.yaml
@@ -42,6 +42,7 @@ services:
     volumes:
       - ./next-app/src:/app/src
       - ./next-app/public:/app/public
+      - ./next-app/prisma:/app/prisma
     restart: always
     ports:
       - 3000:3000
