--- a/next-app/package.json
+++ b/next-app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "6.8.2",
     "next": "15.3.2",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
