--- a/compose.dev.yaml
+++ b/compose.dev.yaml
@@ -43,6 +43,7 @@ services:
       - ./next-app/src:/app/src
       - ./next-app/public:/app/public
       - ./next-app/prisma:/app/prisma
+      - ./next-app/generated:/app/generated
     restart: always
     ports:
       - 3000:3000
