chore: installed swapy library

--- a/next-app/package.json
+++ b/next-app/package.json
@@ -24,6 +24,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
+    "swapy": "^1.0.5",
     "zod": "^3.25.23"
   },
   "devDependencies": {
